--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://newmotif.elscript.co",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -13,6 +12,7 @@
     "react": "^18.2.0",
     "react-confirm-box": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
